Fixed iFrame overflow on mobile

--- a/_scss/module.scss
+++ b/_scss/module.scss
@@ -94,14 +94,24 @@ aside:empty {
 
 .device__prototype {
 	position: absolute;
-	width: 76.56%;
-	height: 69.5%;
-	top: 15.2%;
-	left: 11.9%;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 	border: none;
 	background-color: $background-colour;
-	overflow: none;
-	z-index: 1;
+//	overflow: none;
+}
+
+.device__wrapper {
+	-webkit-overflow-scrolling: touch; 
+	overflow: auto;
+	position: absolute;
+	width: 76.57%;
+	height: 69.6%;
+	top: 15.2%;
+	left: 11.9%;
+	z-index: 2;
 }
 
 .device__phone {
